feat: add structure of file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8" />
-	<title>CV</title>
-	<link rel="stylesheet" type="text/css" href="style.css" />
-</head>
-<body>
-Hello rolling-scopes
-</body>
+  <head>
+	<meta charset="UTF-8">
+	<title>Stashukevich Piotr</title>
+	<link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+	  <div class="photo-area">
+	    <img src="photo.png" alt="" width="150" height="200">
+	  </div>
+	  <div class="personal-data">
+		<p>Piotr</p>
+		<p>Stashukevich</p>
+	  </div>
+	</header>
+	<main>
+      <div class="nav">
+	    <aside>
+		Hello rolling-scopes
+		</aside>
+	  </div>
+	  <div class="cv">
+		<section>
+					Начинка резюме
+		</section>
+		<section>
+			
+		</section>
+		<section>
+			
+		</section>
+		<section>
+			
+		</section>
+	  </div>
+	</main>
+	<footer>
+		 <!-- <audio class="audio" autoplay controls loop src="audio.mp3">Тут должна играть музыка</audio>-->
+	  <small class="copywrite">&copy; Piotr Stashukevich</small>
+	</footer>
+  </body>
 </html>
