refactor: refactoring html and css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="nav">
 	      <aside>
 		      <ul class="menu">
-		   	 		<li><a href="#Contacts">Contacts </a></li>
+		   	 		<li class="first-line"><a class="inverce-color" href="#Contacts">Contacts </a></li>
 			  	  <li><a href="#Sumary">Sumary</a></li>
 			 			<li><a href="#Skills">Skills</a></li>
 			  		<li><a href="#Exsamples">Exsamples</a></li>
