refactor: refactoring html

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 		       <p>вовсю изучаю Java-script</p>
 	       </section>
 	       <section>
-		 			 <h3><a name="Exsamples">Exsamples</a></h3>
-		  		 <p class="code"><code>
+		 		   <h3><a name="Exsamples">Exsamples</a></h3>
+		  		 <p class="code">
+					   <code>
 					   function decToAny(decNumber, base) {<Br>
 						 const stack = [];<Br>
  						 let Anystring = '';<Br>
@@ -66,7 +67,8 @@
 				     }<Br>
 			       return Anystring<Br>
 				     }<Br>
-		       </code></p>
+					   </code>
+				   </p>
 		     </section>
 		     <section>
 		  	   <h3><a name="Experience">Experience</a></h3>
@@ -85,7 +87,7 @@
 				 </section>
 		     <section>
 		      <h3><a name="English">English</a></h3>
-		        <p>Starter-Pre-Intermediate + audio (Общий курс, https://test.str.by): 64%</p>
+		        <p>Starter-Pre-Intermediate + audio (Общий курс, test.str.by): 64%</p>
 		     </section>
 	     </div>
 	   </main>
